--- a/form.html
+++ b/form.html
@@ -13,21 +13,21 @@
     <h1 class="title">Login</h1>
     <br>
     <form class="form-1">
-        <input class="email" type="email" name="Email" placeholder="Digite o e-mail cadastrado" />
-        <input class="password" type="password" name= "password" placeholder = "Digite sua senha"/>
-        <input class="submit" type="submit" name="submit" placeholder="Entrar" />
+        <input class="input-principal" type="email" name="Email" placeholder="Digite o e-mail cadastrado" />
+        <input class="input-principal" type="password" name= "password" placeholder = "Digite sua senha"/>
+        <input class="input-principal" type="submit" name="submit" placeholder="Entrar" />
         <br>
         <h1 class="title-2">Signup</h1>
         <br>
-        <input class="Primeiro-nome" type="" name="Nome" placeholder="Primeiro Nome" />
-        <input class="Segundo-nome" type="text" name="Segundo" placeholder="Segundo Nome" />
-        <input class="Data de nascimento" type="date" name="Data" placeholder="Data de Nascimento" />
-        <input class="CPF" type="text" name="CPF" placeholder="CPF/RG" />
-        <input class="Endereço" type="text" name="Endereço" placeholder="Endereço" />
-        <input class="Email" type="email" name="Email" placeholder="Endereço de E-mail" />
-        <input class="password" type="password" name= "password" placeholder = "Senha"/>
-        <input class="password" type="password" name= "password" placeholder = "Digite sua senha novamente"/>
-        <input class="submit" type="submit" name="submit" placeholder="Entrar" />
+        <input class="input-principal" type="" name="Nome" placeholder="Primeiro Nome" />
+        <input class="input-principal" type="text" name="Segundo" placeholder="Segundo Nome" />
+        <input class="input-principal" type="date" name="Data" placeholder="Data de Nascimento" />
+        <input class="input-principal" type="text" name="CPF" placeholder="CPF/RG" />
+        <input class="input-principal" type="text" name="Endereço" placeholder="Endereço" />
+        <input class="input-principal" type="email" name="Email" placeholder="Endereço de E-mail" />
+        <input class="input-principal" type="password" name= "password" placeholder = "Senha"/>
+        <input class="input-principal" type="password" name= "password" placeholder = "Digite sua senha novamente"/>
+        <input class="input-principal" type="submit" name="submit" placeholder="Entrar" />
     </form><!--center-->
 </div><!--container-->
 </div><!--center-->
