--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
     <form class="form-1">
         <input class="input-principal" type="email" name="Email" placeholder="Digite o e-mail cadastrado" />
         <input class="input-principal" type="password" name= "password" placeholder = "Digite sua senha"/>
-        <input class="input-principal" type="submit" name="submit" placeholder="Entrar" />
+        <input class="input-submit" type="submit" name="submit" placeholder="Entrar" />
         <br>
         <h1 class="title-2">Signup</h1>
         <br>
@@ -27,7 +27,7 @@
         <input class="input-principal" type="email" name="Email" placeholder="Endereço de E-mail" />
         <input class="input-principal" type="password" name= "password" placeholder = "Senha"/>
         <input class="input-principal" type="password" name= "password" placeholder = "Digite sua senha novamente"/>
-        <input class="input-principal" type="submit" name="submit" placeholder="Entrar" />
+        <input class="input-submit" type="submit" name="submit" placeholder="Entrar" />
     </form><!--center-->
 </div><!--container-->
 </div><!--center-->
